--- a/src/main/resources/assets/pirates/lang/en_us.lang
+++ b/src/main/resources/assets/pirates/lang/en_us.lang
@@ -20,6 +20,13 @@ item.pirates.hat.name=Tricorn
 item.pirates.bucket.name=Bucket
 item.pirates.flintlock.name=Flintlock
 item.pirates.dingy.name=Dingy
+item.pirates.captain_cutlass.name=Captain's Cutlass
+item.pirates.dagger.name=Dagger
+item.pirates.hammer.name=Hammer
+item.pirates.glass_full.name=Glass
+item.pirates.flintlock_ball.name=Flintlock ball
+item.pirates.barbossa_hat.name=Hat
+item.pirates.rapier.name=Rapier
 
 tile.pirates.cannon.name=Cannon
 tile.pirates.cell.name=Cell
